crew overflow-y fix

--- a/space-tourism-res/CSS/crew-style.css
+++ b/space-tourism-res/CSS/crew-style.css
@@ -4,6 +4,10 @@ body {
     background-color: rgb(11, 14, 23);   
 }
 
+html, body {
+    height: 100%;
+}
+
 h4  {
     color: rgb(145, 146, 151);
 }
